new_analysis_uniform

--- a/src/notebooks/network_analysis.ipynb
+++ b/src/notebooks/network_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,10 @@
     "import scipy\n",
     "from scipy.stats import norm\n",
     "import torch\n",
+    "from src.datasets.zipfian_dataset import create_dataloaders_zipfian\n",
+    "from src.datasets.uniform_dataset import create_dataloaders_uniform\n",
+    "\n",
+    "\n",
     "\n",
     "from CCNL_readout_DBN import forwardrbm,forwardDBN,classifier, beta_extraction\n",
     "import numpy as np\n",
@@ -35,6 +39,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Datasets statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader, val_loader, test_loader = create_dataloaders(\"/home/student/Desktop/Groundeep/training_tensors\", batch_size = 128, num_workers = 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "294272"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_loader.__len__() *128\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65900"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "659*100"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -43,29 +103,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15200, 1000) (15200, 2) (15200, 1000) (15200, 2)\n",
-      "Pseudo-Inverse Perceptron:\n",
-      "Train Accuracy: 0.8046052631578947\n",
-      "Test Accuracy: 0.7538157894736842\n",
-      "--- Coefficients Debugging ---\n",
-      "Intercept: -6.199666189342086e-09\n",
-      "Betas: [0.69849364 0.03590876 0.04232536]\n",
-      "Weber Fraction: 1.0123310167202524\n",
-      "[{'Layer Size': '1000 500', 'Intercept': np.float64(-6.199666189342086e-09), 'Beta Number': np.float64(0.6984936443787234), 'Beta Size': np.float64(0.035908762759862656), 'Beta Spacing': np.float64(0.04232535730007441), 'Weber Fraction': np.float64(1.0123310167202524), 'Accuracy': 0.7538157894736842}]\n",
-      "Results saved to model_coefficients_results_5.xlsx\n"
+      "Value(False)\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "mat1 and mat2 shapes cannot be multiplied (100x10000 and 40000x1000)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 21\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(input_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     19\u001b[0m     dbn \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[0;32m---> 21\u001b[0m _XtrainComp1 \u001b[38;5;241m=\u001b[39m \u001b[43mforwardDBN\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdbn\u001b[49m\u001b[43m,\u001b[49m\u001b[43mXtrainComp\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m10000\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mclone()\n\u001b[1;32m     22\u001b[0m _YtrainComp \u001b[38;5;241m=\u001b[39m YtrainComp\u001b[38;5;241m.\u001b[39mclone()\n\u001b[1;32m     23\u001b[0m _XtrainComp2 \u001b[38;5;241m=\u001b[39m forwardDBN(dbn, XtrainComp[:, :, \u001b[38;5;241m10000\u001b[39m:\u001b[38;5;241m20000\u001b[39m])\u001b[38;5;241m.\u001b[39mclone()\n",
+      "File \u001b[0;32m~/Desktop/Groundeep/CCNL_readout_DBN.py:33\u001b[0m, in \u001b[0;36mforwardDBN\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m batch_indices:\n\u001b[1;32m     32\u001b[0m     Xtorch \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mTensor(X[n, :, :])\u001b[38;5;241m.\u001b[39mto(DEVICE)  \u001b[38;5;66;03m# Get a single sample\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m     _X[n, :, :] \u001b[38;5;241m=\u001b[39m \u001b[43mforwardrbm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrbm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mXtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclone\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mclone()  \u001b[38;5;66;03m# Store the transformed sample\u001b[39;00m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m#end\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \n\u001b[1;32m     36\u001b[0m \u001b[38;5;66;03m# Free up memory used by the intermediate tensor\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m Xtorch\n",
+      "File \u001b[0;32m~/Desktop/Groundeep/CCNL_readout_DBN.py:20\u001b[0m, in \u001b[0;36mforwardrbm\u001b[0;34m(self, v)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mforwardrbm\u001b[39m(\u001b[38;5;28mself\u001b[39m, v):\n\u001b[0;32m---> 20\u001b[0m     p_h \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msigmoid(\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mW\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhid_bias)\n\u001b[1;32m     21\u001b[0m     h \u001b[38;5;241m=\u001b[39m (p_h \u001b[38;5;241m>\u001b[39m torch\u001b[38;5;241m.\u001b[39mrand_like(p_h))\u001b[38;5;241m.\u001b[39mfloat()  \u001b[38;5;66;03m# Stochastic activation\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m p_h, h\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (100x10000 and 40000x1000)"
      ]
     }
    ],
    "source": [
-    "path_to_dbn=\"/home/student/Desktop/Groundeep/networks/zipfian\"\n",
-    "name_of_dbn=\"_idbn_trained_zipfian_500_500\"\n",
+    "path_to_dbn=\"/home/student/Desktop/Groundeep/networks/non_zipfian\"\n",
+    "name_of_dbn=\"idbn_trained_uniform_1000_1500\"\n",
     "path_to_train_dataset='/home/student/Desktop/Groundeep/pairs_from_mat_train.pkl'\n",
     "path_to_test_dataset= '/home/student/Desktop/Groundeep/pairs_from_mat_test.pkl'\n",
     "test_file = '/home/student/Desktop/Groundeep/NumStim_1to32_100x100_TE.mat'\n",
     "output_file = 'model_coefficients_results_5.xlsx'\n",
     "# Prepare the results for saving into an Excel file\n",
     "results = []\n",
-    "layer_size = [1000, 500]\n",
+    "layer_size = [1000, 1500]\n",
     "\n",
     "train_dataset = pickle.load(open(path_to_train_dataset, 'rb'))\n",
     "XtrainComp, YtrainComp, idxs_train = train_dataset['data'].to(DEVICE), train_dataset['labels'].to(DEVICE), train_dataset['idxs'].to(DEVICE)\n",
@@ -134,15 +198,6 @@
     "\n",
     "# Free unused CUDA memory\n",
     "torch.cuda.empty_cache()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%reset -f"
    ]
   }
  ],
