--- a/src/notebooks/network_analysis.ipynb
+++ b/src/notebooks/network_analysis.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +64,17 @@
       "Weber Fraction: 0.8486011036905079\n",
       "[{'Layer Size': '1000 1500', 'Intercept': np.float64(-6.9784225737319784e-09), 'Beta Number': np.float64(0.8332616798533359), 'Beta Size': np.float64(0.10021793522364256), 'Beta Spacing': np.float64(0.020477445750146265), 'Weber Fraction': np.float64(0.8486011036905079), 'Accuracy': 0.7752631578947369}]\n",
       "Results saved to model_coefficients_results_5.xlsx\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
